--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "vue": "2.6.10",
     "vue-router": "3.0.6",
     "vuex": "3.1.0",
-    "xterm": "^4.19.0"
+    "xterm": "^4.19.0",
+    "xterm-addon-attach": "^0.6.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "4.4.4",
