--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
   },
   "dependencies": {
     "axios": "0.18.1",
+    "codemirror": "^5.61.1",
     "core-js": "3.6.5",
     "element-ui": "2.13.2",
     "js-cookie": "2.2.0",
+    "js-yaml": "^4.1.0",
     "normalize.css": "7.0.0",
     "nprogress": "0.2.0",
     "path-to-regexp": "2.4.0",
@@ -26,7 +28,8 @@
     "vue-router": "3.0.6",
     "vuex": "3.1.0",
     "xterm": "^4.19.0",
-    "xterm-addon-attach": "^0.6.0"
+    "xterm-addon-attach": "^0.6.0",
+    "yaml": "^2.1.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "4.4.4",
