--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "nprogress": "0.2.0",
     "path-to-regexp": "2.4.0",
     "vue": "2.6.10",
+    "vue-dynamic-form-component": "^2.8.1",
+    "vue-echarts": "^6.2.3",
     "vue-router": "3.0.6",
     "vuex": "3.1.0",
     "xterm": "^4.19.0",
@@ -43,6 +45,7 @@
     "babel-plugin-dynamic-import-node": "2.3.3",
     "chalk": "2.4.2",
     "connect": "3.6.6",
+    "echarts": "^5.4.0",
     "eslint": "6.7.2",
     "eslint-plugin-vue": "6.2.2",
     "html-webpack-plugin": "3.2.0",
@@ -52,6 +55,8 @@
     "sass-loader": "8.0.2",
     "script-ext-html-webpack-plugin": "2.1.3",
     "serve-static": "1.13.2",
+    "stylus": "^0.59.0",
+    "stylus-loader": "^7.1.0",
     "svg-sprite-loader": "4.1.3",
     "svgo": "1.2.2",
     "vue-template-compiler": "2.6.10",
@@ -63,7 +68,6 @@
   ],
   "engines": {
     "node": ">=8.9",
-
     "npm": ">= 3.0.0"
   },
   "license": "MIT"
