--- a/.env.production
+++ b/.env.production
@@ -2,6 +2,6 @@
 ENV = 'production'
 
 # base api
-VUE_APP_BASE_API = 'http://localhost:8080/api'
-VUE_APP_WS_API = 'ws://127.0.0.1:8080/api'
+VUE_APP_BASE_API = 'http://375ueb.natappfree.cc/api'
+VUE_APP_WS_API = 'ws://375ueb.natappfree.cc/api'
 
