--- a/.env.development
+++ b/.env.development
@@ -3,4 +3,4 @@ ENV = 'development'
 
 # base api
 VUE_APP_BASE_API = 'http://localhost:8080/api'
-VUE_APP_WS_API = 'ws://127.0.0.1:8080/api'
+VUE_APP_WS_API = 'ws://localhost:8080/api'
